tests/ui/abi/basic.stderr
error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/abi/basic.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/abi/basic.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: aborting due to 2 previous errors

